dockerで実行できるように

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,46 +11,18 @@ events {
 http {
 	server {
 		listen 80;
-		server_name sho-fukada-shiftapp.com;
-		return 301 https://sho-fukada-shiftapp.com;
-
-
-		#location / {
-		#	root /home/ubuntu/Webapp_trainning-main/;
-		#	proxy_pass http://localhost:3000;
-		#}
-		# location /.well-known/pki-validation/ {
-		#	 alias /home/ubuntu/;
-		#}
-	}
-
-	server {
-		listen 443 ssl;
-		server_name sho-fukada-shiftapp.com;
-		ssl_certificate /etc/nginx/ssl/combined.crt;
-		ssl_certificate_key /etc/nginx/ssl/ssl_shiftapp.key;
 		location / {
-			proxy_pass http://localhost:3000;
+			proxy_pass http://webapp:3000;
 		}
-        ##
-        # SSL Settings
-        ##
 
-        ssl_protocols TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
-        ssl_prefer_server_ciphers on;
 
-        add_header Strict-Transport-Security "max-age=63072000" always;
-
-        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
-
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-
-        ssl_stapling on;
-        ssl_stapling_verify on;
-
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 1d;
-
+		# location / {
+		# 	root /home/ubuntu/Webapp_trainning-main/;
+		# 	proxy_pass http://localhost:3000;
+		# }
+		# location /.well-known/pki-validation/ {
+		# 	 alias /home/ubuntu/;
+		# }
 	}
 
 
